--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "typed-tensor"
+name = "typedtensor"
 description = "Yet another type annotations and runtime checking for tensor shape and datatype ..."
 version = "0.0.0"
 readme = "README.md"
@@ -16,11 +16,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build]
-include = ["typed-tensor/*"]
+include = ["typedtensor/*"]
 
 [tool.ruff]
 line-length = 120
-src = ["typed-tensor", "examples"]
+src = ["typedtensor", "examples"]
 fix = true
 show-fixes = true
 
